--- a/src/global.css
+++ b/src/global.css
@@ -4,7 +4,7 @@
 }
 body {
     background-color: #1f1f1f;
-    font-family: 'hk grotesk';
+    font-family: 'Roboto', sans-serif;
     /*height: 100vh;*/
     /*width: 100vw;*/
     max-width: 100%;
